# Novel_Assistant

./: .gitignore  CLAUDE.md  LOG.md  PAGE_INFO.md  README.md  WEBSOCKET_README.md  checklist.md  memory.md  pyproject.toml  spec.md  tasks.md  剩余内容.md  异常收集2026-02-11.md  插件系统更新.md  未来计划.md  梳理.md
Novel_Assistant/: README.md  alembic.ini  langgraph.json  pyproject.toml  run.py  use.md
Novel_Assistant/alembic/versions/: 4895c3fe4269_初始化.py
Novel_Assistant/config/: graph_config.yaml  model_config.yaml
Novel_Assistant/document/: 单元测试文档.md
Novel_Assistant/src/: main.py  start_api.py  test_api.py
Novel_Assistant/src/api/: __init__.py  app.py  error.py  error_handler.py  models.py
Novel_Assistant/src/api/routers/: chat.py  chat_helper.py  chat_helper_api.py  document.py  document_api.py  health.py  novel_api.py  user_api.py  websocket.py
Novel_Assistant/src/api/services/: chat_help_service.py  document_service.py
Novel_Assistant/src/common/: __init__.py  decorator.py  enums.py  err.py  errors.py  persistence_layer.py  store.py  utils.py
Novel_Assistant/src/common/adapter/: novel.py
Novel_Assistant/src/common/clients/pg/: pg_client.py  pg_model.py  pg_models.py
Novel_Assistant/src/common/config/: __init__.py  loader.py
Novel_Assistant/src/common/config/agent/: model_configs.py
Novel_Assistant/src/common/config/log/: graph_log_handler.py
Novel_Assistant/src/common/configer/: loader.py
Novel_Assistant/src/common/configer/agent/: model_configs.py  node_configs.py
Novel_Assistant/src/common/log/: __init__.py  graph_log_handler.py  log.py
Novel_Assistant/src/common/models/: __init__.py  qwen.py  siliconflow.py
Novel_Assistant/src/config/: model_config.yaml
Novel_Assistant/src/core/agent/: agent_kd_build.py  context copy.py  context.py  kd_build_graph.py  nodes.py  prompts.py  runtime.py  state.py
Novel_Assistant/src/core/domain/: model.py  models.py
Novel_Assistant/src/services/: agent_service.py  document_service.py  novel_service.py  user_service.py
Novel_Assistant/src/tests/: test_websocket.py
Novel_Assistant/tests/: conftest.py  test_chat_api.py  test_novel_api_create.py  test_novel_api_exceptions.py  test_novel_service_directory.py
Novel_Assistant/tests/services/: test_document_service.py
backend/: .gitignore  check_agents.py  pyproject.toml  run.py  test_core_plugins.py  test_plugin_core.py  test_plugin_integration.py  test_plugin_operations.py  use.md  verify_am_id.py  verify_plugin.py  知识Agent.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2c8a1d5f9a7b_add_plugin_auth_and_data_source_config.py  300e36278979_add_now_version_to_node.py  42dce66f6f51_refactor_models_plugin_work_node_user.py  620ed8357b7e_update_schema_based_on_current_models.py  6b24678ce533_standardize_memory_and_kd_fields.py  6feb7036b511_init_unified_schema_v2.py  7feb7036b512_fix_missing_version_number.py  99ab30cd4059_refactor_to_unified_architecture_v1_1.py  9f5619e4eeef_add_plugin_fields_data_source_render_.py  a1b2c3d4e5f6_convert_core_enum_columns_to_string.py  a818cba4083a_remove_user_and_user_id.py  b12f3a9c2d10_add_plugin_data_source_type_config.py  b9cc8a36760e_update_schema_version_to_str.py  c46d736f982c_drop_plugin_scope_type.py  c4d8f0b5d9aa_add_plugin_version_loader_runtime_fields.py  d2b1a3c6f7e1_convert_plugin_enum_columns_to_string.py  e7c3f0f2f4a1_drop_plugin_data_source_url.py  f3a7b2c7c1c1_update_render_type_enum.py  f7e8c9d0a1b2_convert_plugin_data_source_type_to_string.py
backend/document/: 开发测试记录.md
backend/scripts/: check_agents.py  init_plugins.py  init_work_types.py
backend/src/: start_api.py
backend/src/api/: app.py  base.py  dependencies.py  error_handler.py
backend/src/api/routers/: kd_api.py  novel_api.py
backend/src/common/: config.py  decorator.py  enums.py  errors.py  memory.py  persistence_layer.py  utils.py
backend/src/common/configer/: __init__.py
backend/src/common/decorators/: plugin_operation.py
backend/src/common/log/: __init__.py  graph_log_handler.py  log.py
backend/src/common/model/: base_agent.py  base_plugin_models.py  plugin_definition.py
backend/src/common/utils/: plugin.py  utils.py
backend/src/core/agents/: __init__.py  agent_kd_build.py  nodes.py  state.py
backend/src/core/plugin/: annotations.py  di.py  instance.py  loader.py  manager.py  operation_registry.py  operation_scanner.py  register.py  runtime.py  tool_builder.py  utils.py
backend/src/core/ui/: base.py  home.py  layout.py
backend/src/infrastructure/langgraph/: checkpointer.py
backend/src/infrastructure/pg/: pg_client.py  pg_models.py
backend/src/plugin/agent/: router.py  schema.py
backend/src/plugin/agent_manager/: d  plugin.py
backend/src/plugin/common/: base.py  tool_register.py
backend/src/plugin/demo/: plugin.py
backend/src/plugin/document_helper_agent/: prompts.py
backend/src/plugin/kd/: plugin.py  router.py  schema.py  service.py
backend/src/plugin/kd_builder/: graph.py  nodes.py
backend/src/plugin/memory/: __init__.py  plugin.py  router.py  schema.py  service.py
backend/src/plugin/project_helper_agent/: state.py
backend/src/plugin/work_type/: plugin.py  router.py  schema.py
backend/src/plugins/demo_plugin/: plugin.py
backend/src/services/: document_service.py  user_service.py
backend/src/services/agent/: project_helper_service.py  service.py
backend/src/services/document/: service.py
backend/src/services/kd/: __init__.py  service.py
backend/src/services/knowledge_base/: service.py
backend/src/services/memory/: service.py
backend/src/services/node/: __init__.py  service.py
backend/src/services/novel/: service.py
backend/src/services/plugin/: __init__.py  service.py
backend/src/services/user/: service.py
backend/src/services/work/: __init__.py  service.py
backend/src/services/work_type/: __init__.py  service.py
backend/tests/: conftest.py  manual_test_plugin_proxy.py  test_novel_api_real_sql.py
backend/tests/api/: test_agent.py  test_kd.py  test_memory.py  test_node.py  test_node_version.py  test_plugin.py  test_work.py  test_work_type.py
(+446 files in other folders)
